--- a/.github/workflows/create_image_of_release.yml
+++ b/.github/workflows/create_image_of_release.yml
@@ -37,5 +37,5 @@ jobs:
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
-          env: |
-            DATABASE_URL=${{ secrets.TEST_DATABASE_URL }}
+        env:
+          DATABASE_URL=${{ secrets.TEST_DATABASE_URL }}
