--- a/.github/workflows/create_image_of_release.yml
+++ b/.github/workflows/create_image_of_release.yml
@@ -38,4 +38,4 @@ jobs:
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
           env:
-            DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
+            DATABASE_URL=${{ secrets.TEST_DATABASE_URL }}
